profile-pic / PDFS struct /edit profile added to admin's dashboard